--- a/configs/agents/verification.yaml
+++ b/configs/agents/verification.yaml
@@ -1,24 +1,26 @@
 # @package agent.verification
 
 name: Verification
-use_model: True
 metadata:
   description: This node acts as a verification agent, verifies whether
     fixes provided by critic agent are successfully solved and suggest solutions if not
+
 input_schema:
   type: state
   name: verification
+output_schema:
+  type: structured_output
+  name: verification
+tool_schemas: [ ]
+
 edges:
   in_coming:
-    - critic
+    - coding
   out_going:
     - coding
     - end
 
-tool_schemas: [ ]
-output_schema:
-  type: structured_output
-  name: verification
+use_model: True
 
 model_name: gpt-4o-mini
 model_provider: openai
