--- a/configs/agents/critic.yaml
+++ b/configs/agents/critic.yaml
@@ -4,6 +4,10 @@ name: Critic
 metadata:
   description: This node acts as a critic agent, analyzes, points out flaws in given images and gives fixes
 
+save_rendered_dir: assets/rendered_images
+anchor_script_path: assets/blender_script/anchor.py
+validating_prompt: nothing
+
 input_schema:
   type: state
   name: critic
@@ -13,10 +17,11 @@ output_schema:
 tool_schemas: [ ]
 
 edges:
-  in_coming:
-    - coding
+  in_coming: [ ]
+  #  - coding
   out_going:
-    - verification
+    #    - coding
+    - end
 
 use_model: True
 
