refactor: refactor files
- remove indent
- change to relation imports

Signed-off-by: vanminhng <minhnv14099@gmail.com>

--- a/configs/agents/coding.yaml
+++ b/configs/agents/coding.yaml
@@ -27,6 +27,10 @@ edges:
 #    - critic
 #    - verification
 
+system_prompt: ''
+human_generate_template: ''
+human_fix_template: ''
+human_improve_template: ''
 
 use_model: True
 
