--- a/configs/agents/coding.yaml
+++ b/configs/agents/coding.yaml
@@ -6,7 +6,10 @@ metadata:
     based on given subtask and relevant document or/and code snippet
 
 anchor_folder: assets/blender_script/
-fix_error_attempts: 1
+anchor_script_file: assets/blender_script/anchor_coding.py
+save_scripts: True
+check_error_file: assets/blender_script/check_error.py
+fix_error_attempts: 5
 
 input_schema:
   type: state
@@ -25,8 +28,8 @@ template_file: templates/prompt/coding.yaml
 
 use_model: True
 
-model_name: gpt-4o
-model_provider: openai
+model_name: gpt-4o-mini
+model_provider: ~
 #model_api_key: <API-KEY>
 
 output_schema_as_tool: True
