--- a/configs/hydra.yaml
+++ b/configs/hydra.yaml
@@ -2,7 +2,7 @@ hydra:
   job:
     chdir: false
   run:
-    dir: outputs/${now:%Y-%m-%d}
+    dir: outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
   sweep:
     dir: multirun/${now:%Y-%m-%d}
     subdir: ${hydra.job.override_dirname}
