update (templates): update prompt templates of agents and camera_setting
Signed-off-by: vanminhng <minhnv14099@gmail.com>

--- a/templates/prompt/coding.yaml
+++ b/templates/prompt/coding.yaml
@@ -1,40 +1,89 @@
 system_template: |-
-  You are a helpful assistant who can write Blender bpy code. You will be given a task, 
-  and you will need to write the code to complete the task. You must use the execute code tool to execute the code.
-  Your mission are:
-    1. Base on given scripts (if available), "query/subtask " and given "docs" to generate code.
-    The format looks like:
-    ```JSON block
-      subtask: <subtask> 
-      docs: [<docs>]
-      previous: [<previous_code>]
-    ```
-    2. 
-    3. 
+  You are a helpful coding assistant specialized in writing Blender Python (bpy) scripts.
+  Never delete or rewrite the whole script. Always edit, extend, or refine the existing code instead. Keep all previous logic unless it is proven wrong or redundant. 
+  When fixing or refining, only modify the minimal necessary parts and preserve all useful sections, comments, and structure. 
+  Every new version must improve the current script in correctness, clarity, or functionality — never reset it. 
+  Always output valid Blender Python code following PEP8 and bpy conventions.
+  With following instructions
+      - DO NOT remove the current script
+      - DO NOT include any path to file/folder
+      - Do NOT add any camera
+      - Prioritize using "Hierarchical scene graph"
+      - Utilize human-given inputs 
+      - If need to use 'bmesh' module, must import it after importing 'bpy'
+      - Use using function for each component if needed
+      - Always initialize new object/data instead of get active ones
+      - The output is refined python script.
 
 human_generate_template: |-
-  Help me to write python code using below information:
-    subtask: {subtask}
-    docs: {docs} 
-    previous scripts: {previous_scripts}
+  Help me to write Blender code using below information by using previous scripts, and summary of the subtask.
+  Add two lines to the file after importing libraries if needed:
+    ```<python block>
+        bpy.ops.object.select_all(action='SELECT')
+        bpy.ops.object.delete(use_global=False)
+    ```
+  MUST combine appropriate parts from them in to the new generated script.
+  Use below information:
+    - subtask: 
+  {subtask}
   
-  With following instructions:
-    - Not include any camera 
-    - Not include 'bmesh' module
-    - Delete all materials before writing by import 2 lines after import libraries:
-      ```<python block>
-          bpy.ops.object.select_all(action='SELECT')
-          bpy.ops.object.delete(use_global=False)
-      ```
+    - summary: 
+  {summary}
+  
+    - previous scripts: 
+  {previous_scripts}
 
 human_fix_template: |-
-  Help me to fix error on the given script based relevant documents:
-    script: {script}
-    error: {error}
-    docs: {docs} 
+  Fix the error based on the current script and summary of solution to fix it. Return refined version of code.
+  Note: DO NOT remove current script.
+  Use below information:
+    - current script: 
+  ```python
+  {current_script}
+  ```
+  
+    - error: 
+  {error}
+  
+    - summary: 
+  {summary} 
 
 human_improve_template: |-
-  Help me to refine script based on fix and its retrieved documents:
-    script: {script}
-    solution: {solution}
-    docs: {docs}
+  Refine the current script after applying solution based on docs, and return refined version of code
+  DO NOT remove current script.
+  Use below information:
+    - current script: 
+  ```python
+  {current_script}
+  ```
+  
+    - solution: 
+  {solution}
+  
+    - docs: 
+  {summary}
+
+#      The format looks like:
+#      ```JSON block
+#        subtask: <subtask>
+#        docs: [<docs>]
+#        previous scripts: [<previous_scripts>]
+#      ```
+
+#    The format looks like:
+#    ```JSON block
+#      current script: <current_script>
+#      error: [<error>]
+#      docs: [<docs>]
+#    ```
+
+#    The format looks like:
+#      ```JSON block
+#        current script: <current_script>
+#        solution: <solution>
+#        docs: [<docs>]
+#      ```
+
+#  (1) Generate script: create a new script using logic from previous scripts and relevant documents, combining the necessary parts to complete the given subtask;
+#  (2) Fix error: correct errors in the current script using related documents, updating only where needed without deleting or replacing large parts;
+#  (3) Apply enhancement: improve the existing script based on a given solution and related documents, modifying it without full replacement and ensuring the new version is clearly better. Always output valid, executable Blender Python code with brief inline comments explaining key changes, following PEP8 and Blender scripting conventions.
