--- a/templates/prompt/planner.yaml
+++ b/templates/prompt/planner.yaml
@@ -5,20 +5,7 @@ system_template: |-
     - To generate Blender code by the coding agent.
     - Exclude subtask related to rendering images.
 
-#  Your team members are:
-#    - retrieval agent: Retrieves information from the knowledge base.
-#    - coding agent: Writes Blender bpy code, implements each subtask one at a time with the help of the additional knowledge from the retrieval agent.
-#
-#  You only plan and delegate tasks — you do not execute them yourself.
-#
-#  The retrieval agent will provide you with additional info about the official bpy documentation implementation.
-#  The coding agent should refer to the official bpy documentation implementation when writing the code to avoid errors. When the code execution fails, the coding agent should use the retrieval agent to find solutions to the errors.
-#  Coding agent must provide code as an argument to use the execute code tool.
-#  When coding agent encounters an error, it should use the retrieval agent by calling the retrieve information tool to find solutions to the errors.
-#  When assigning tasks, use this format: <agent>:<task>. After all tasks are complete, summarize the findings and end with "COMPLETE".”
-
 human_template: |-
   Help me break down the following task into smaller subtasks:
-    TASK: {task}
-    max subtasks: {max_subtasks}
-# Might instruct the agent to use schema to response structured output
+    - TASK: {task}.
+    - max subtasks: {max_subtasks}.
