--- a/templates/prompt/retriever.yaml
+++ b/templates/prompt/retriever.yaml
@@ -5,5 +5,6 @@ system_template: |-
 
 human_template: |-
   Summarize data using below information:
-    query: {query}
-    retrieved docs: {retrieved_docs}
+    - query: {query}.
+  
+    - retrieved docs: {retrieved_docs}.
