--- a/configs/agents/coding.yaml
+++ b/configs/agents/coding.yaml
@@ -5,11 +5,11 @@ metadata:
   description: This node acts as a coding agent, generating Python code
     based on given subtask and relevant document or/and code snippet
 
-anchor_folder: assets/blender_script/
+script_folder: assets/blender_script/
 anchor_script_file: assets/blender_script/anchor_coding.py
 save_scripts: True
 check_error_file: assets/blender_script/check_error.py
-fix_error_attempts: 5
+fix_error_attempts: 10
 
 input_schema:
   type: state
@@ -31,6 +31,5 @@ use_model: True
 model_name: gpt-4o-mini
 model_provider: ~
 #model_api_key: <API-KEY>
-
 output_schema_as_tool: True
 chat_model: null
