--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,9 @@ async-timeout==4.0.3
 attrs==25.4.0
 beautifulsoup4==4.14.2
 blender==1.4
-bpy==3.6.0
+#bpy==3.6.0
 Brotli==1.1.0
-bs4==0.0.2
+#bs4==0.0.2
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -54,17 +54,16 @@ Jinja2==3.1.6
 jiter==0.11.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+langchain-core==1.0.1
 langchain==1.0.2
 langchain-classic==1.0.0
-langchain-community==0.4
-langchain-core==1.0.0
-langchain-huggingface==0.3.1
-langchain-mistralai==1.0.0
-langchain-ollama==0.3.10
-langchain-openai==0.3.35
+langchain-community==1.0.0a1
+#langchain-huggingface==0.3.1
+#langchain-mistralai==1.0.0
+langchain-openai==1.0.1
 langchain-text-splitters==1.0.0
 langgraph==1.0.1
-langgraph-checkpoint==2.1.2
+langgraph-checkpoint==3.0.0
 langgraph-prebuilt==1.0.1
 langgraph-sdk==0.2.9
 langsmith==0.4.34
@@ -89,8 +88,9 @@ pandas==2.3.3
 parso==0.8.5
 pdfkit==1.0.0
 pexpect==4.9.0
+pip==25.2
 pillow==11.3.0
-playwright==1.55.0
+#playwright==1.55.0
 prompt_toolkit==3.0.52
 propcache==0.4.1
 ptyprocess==0.7.0
@@ -101,11 +101,11 @@ pydantic-settings==2.11.0
 pydantic_core==2.33.2
 pydub==0.25.1
 pydyf==0.11.0
-pyee==13.0.0
+#pyee==13
 Pygments==2.19.2
 pypdf==6.1.3
 pyphen==0.17.2
-pyppeteer==2.0.0
+#pyppeteer==2.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
