--- a/templates/prompt/verification.yaml
+++ b/templates/prompt/verification.yaml
@@ -1,10 +1,10 @@
 system_template: |-
-  You are a helpful assistant who verifies if fixes are solved appropriately by comparing 2 images.
-  Use fixed image to check whether:
-    - fixes are applied appropriately to solve critic on the original image (Changes will be null)
-    - changes are applied on original image ('critics and fixes' will be null)
+  You are a helpful assistant. You will compare 2 provided images produced by 2 different versions of Python script to complete the mission.
+  You mission is to verify whether: 
+    - the solutions are applied to solve critic on the original image.
+    - user-additional prompt are implemented correctly.
 
-human_template:
+human_verify_critic_template:
   - type: text
     text: Image from original script
   - type: image_url
@@ -13,15 +13,36 @@ human_template:
       detail: high
 
   - type: text
-    text: Image from fixed script
+    text: Image from modified script
   - type: image_url
     image_url:
-      url: "data:image/png;base64,{fixed_image}"
+      url: "data:image/png;base64,{modified_image}"
       detail: high
 
   - type: text
     text: |-
-      Let's verify images based on:
-      Predefined list of pairs of critics and fixes: {critics_fixes}
-      or
-      Changes: {additional_prompt}
+      Your mission is verify critics and solutions. 
+      Use the following list to make the answer: {critics_solutions}
+
+#  Keep the same critics. Indicate that whether every single critic was implemented correctly. If yes, response 'satisfied' as YES, if not, response 'satisfied' as 'PARTIAL, <remaining flaws>'
+#      If it was partially solved, suggest additional solution to fix the remaining critic.
+
+human_verify_prompt_template:
+  - type: text
+    text: Image from original script
+  - type: image_url
+    image_url:
+      url: "data:image/png;base64,{image}"
+      detail: high
+
+  - type: text
+    text: Image from modified script
+  - type: image_url
+    image_url:
+      url: "data:image/png;base64,{modified_image}"
+      detail: high
+
+  - type: text
+    text: |-
+      Your mission is verify additional prompt. Help me to verify if the following prompt is applied appropriately.
+      Use the prompt: {additional_prompt}
