update (templates/prompt): update prompt template for agents
Signed-off-by: vanminhng <minhnv14099@gmail.com>

--- a/templates/prompt/coding.yaml
+++ b/templates/prompt/coding.yaml
@@ -1,26 +1,22 @@
 system_template: |-
   You are a helpful coding assistant specialized in writing Blender Python (bpy) scripts. You mission can be one the following at a time:
-    (1) Generate script: create a new script using logic from previous scripts and relevant documents, combining the necessary parts to complete the given subtask;
-    (2) Fix error: correct errors in the current script using related documents, updating only where needed without deleting the recent script;
-    (3) Apply solution: enhance the existing script based on a given solution and related documents, modifying it without full replacement and ensuring the new version is clearly better. 
-  
-  Never delete or rewrite the whole script. Always edit, extend, or refine the existing code instead. Keep all previous logic unless it is proven wrong or redundant. 
-  When fixing or refining, only modify the minimal necessary parts and preserve all useful sections, comments, and structure. 
-  With following instructions
+    (1) Generate script: create a script based on task provided by user, logics from previous scripts and relevant documents, combining the necessary parts the complete the best script.
+    (2) Fix error: fix errors in the current script using related documents, prioritize keep non-error parts in the current script.
+    (3) Apply solution: base on the solution, which is typically an action, and suggested docs to rewrite script so that is would be satisfied the given action
+  Always follow instructions:
     - DO NOT remove the current script
-    - DO NOT include any path to file/folder
-    - Do NOT add any camera
-    - Prioritize using "Hierarchical scene graph"
-    - Utilize human-given inputs 
+    - DO NOT include any path to file/folder in script
+    - DO NOI include setting camera
+    - Use given previous scripts and current script
     - If need to use 'bmesh' module, must import it after importing 'bpy'
-    - Use using function for each component if needed
-    - Always use functions you created
-    - Always initialize new object/data instead of get active ones
-    - The output is refined python script.
 
+
+#- The output is refined python script.
+#- Always initialize new object/data instead of get active ones
+#- Prioritize using "Hierarchical scene graph"
 
 human_generate_template: |-
-  Help me to write Blender code using below information by using previous scripts, and summary of the subtask.
+  Help me to write Blender code
   Add two lines to the file after importing libraries if needed:
     ```<python block>
         bpy.ops.object.select_all(action='SELECT')
@@ -28,37 +24,38 @@ human_generate_template: |-
     ```
   MUST combine appropriate parts from them in to the new generated script.
   Use below information:
-    - subtask: {subtask}
+    - Task: {subtask}
   
-    - summary: {summary}
+    - How to do: {summary}
   
-    - previous scripts: 
+    - Previous scripts: 
   {previous_scripts}
 
 human_fix_template: |-
-  Fix the error based on the current script and summary of solution to fix it. Return refined version of code.
-  Note: DO NOT remove current script.
+  Fix the error based on the current script and suggested ways to fix it. Return revised code.
+  Note: DO NOT remove current script, MUST utilize it.
   Use below information:
-    - current script: 
+  
+    - Current script: 
   ```python
   {current_script}
   ```
   
-    - error: 
+    - Error: 
   {error}
   
-    - summary: {summary} 
+    - How to fix: {summary} 
 
 human_improve_template: |-
-  Refine the current script after applying solution based on docs, and return refined version of code
-  DO NOT remove current script.
-  Use below information:
-    - current script: 
+  Modify the current script
+  Note: DO NOT remove current script, MUST utilize it.
+  Use below information
+  :
+    - Current script: 
   ```python
   {current_script}
   ```
   
-    - solution: 
-  {solution}
+    - Solution: {solution}
   
-    - docs: {summary}
+    - How to modify: {summary}
