chore (.): update files
- main.py
- .gitignore
- .env

Signed-off-by: vanminhng <minhnv14099@gmail.com>

--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 BASE_URL=https://openrouter.ai/api/v1
 
-#Nghi Ngo
 OPENROUTER_API_KEY=???
 
-KMP_DUPLICATE_LIB_OK=true
-HYDRA_FULL_ERROR=1
 FAISS_OPT_LEVEL=generic
 FAISS_ENABLE_GPU=ON
+
+HYDRA_FULL_ERROR=1
+OC_CAUSE=1
+
+KMP_DUPLICATE_LIB_OK=true
