--- a/configs/agents/retriever.yaml
+++ b/configs/agents/retriever.yaml
@@ -4,7 +4,7 @@ name: Retriever
 metadata:
   description: This node acts as a retriever agent, helps to retrieve relevant documents with given query from pre-defined vectorstore
 
-db_path: vectorstores/faiss/
+db_path: vectorstores/faiss_4.0/
 embedding_name: all-MiniLM-L6-v2.gguf2.f16.gguf
 
 n_docs: 1
