--- a/configs/agents/verification.yaml
+++ b/configs/agents/verification.yaml
@@ -7,6 +7,7 @@ metadata:
 
 save_rendered_dir: assets/rendered_images/verification
 anchor_script_path: assets/blender_script/anchor_verification.py
+camera_template_file: ${agent.critic.camera_template_file}
 camera_setting_file: ${agent.critic.camera_setting_file}
 
 verification_attempts: 3
